--- a/foodgram/templates/includes/card_recipe.html
+++ b/foodgram/templates/includes/card_recipe.html
@@ -1,34 +1,25 @@
 {% load static %}
-{% load recipe_filters %}
 <div class="card" data-id="{{ recipe.id }}">
     {% load thumbnail %}
     {% thumbnail recipe.image "600x500" crop="center" upscale=True as im %}
-        <a href="{% url 'recipe' recipe_id=recipe.id %}" class="link"><img src="{{ im.url }}" alt="Нет изображения" class="card__image"></a>
+        <a href="*" class="link"><img src="{{ im.url }}" alt="Нет изображения" class="card__image"></a>
     {% endthumbnail %}
     <div class="card__body">
-        <a class="card__title link" href="{% url 'recipe' recipe_id=recipe.id %}">{{ recipe.title }}</a>
+        <a class="card__title link" href="*">{{ recipe.title }}</a>
         <ul class="card__items">
-            {% for tag in recipe.tags.all %}
+            {% for tag in recipe.tag.all %}
                 <li class="card__item"><span class="badge badge_style_{{ tag.color }}">{{ tag.title }}</span></li>
             {% endfor %}
         </ul>
         <div class="card__items card__items_column">
-            <p class="card__text"><span class="icon-time"></span> {{ recipe.prep_time }} мин.</p>
-            <p class="card__text"><span class="icon-user"></span> <a href="{% url 'profile' username=recipe.author.username %}" style="color: black">{{ recipe.author|display_name }}</a></p>
+            <p class="card__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
+            <p class="card__text"><span class="icon-user"></span> <a href="*" style="color: black">{{ recipe.author.username }}</a></p>
         </div>
     </div>
     {% if user.is_authenticated %}
         <div class="card__footer">
-            {% if recipe|is_purchase:user %}
-                <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
-            {% else %}
-                <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-            {% endif %}
-            {% if recipe|is_favorite:user %}
-                <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
-            {% else %}
-                <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
-            {% endif %}
+            <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+            <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
         </div>
     {% endif %}
 </div>
