--- a/foodgram/templates/index.html
+++ b/foodgram/templates/index.html
@@ -15,7 +15,7 @@
             {% include "includes/card_tag.html" %}
         </div>
         <div class="card-list">
-            {% for recipe in page %}
+            {% for recipe in object_list %}
                 {% include "includes/card_recipe.html" with recipe=recipe %}
             {% endfor %}
         </div>
