--- a/foodgram/users/templates/registration/login.html
+++ b/foodgram/users/templates/registration/login.html
@@ -1,42 +1,46 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends "includes/base.html" %}
 {% load user_filters %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Войти на сайт</title>
-    <link rel="stylesheet" href="./pages/form.css">
-</head>
+{% block title %}Войти на сайт{% endblock %}
+
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+{% endblock %}
 
 {% block content %}
+<main class="main container">
     <div class="main__header">
         <h1 class="main__title">Войти на сайт</h1>
     </div>
     <div class="form-container">
-        <form class="form">
+        <form method="POST" action="{% url 'login' %}" class="form">
+            {% csrf_token %}
             <div class="form__group">
-                <label for="id_username" class="form__label">Имя</label>
+                <label for="{{ form.username.id_for_label }}" class="form__label">Имя пользователя</label>
                 <div class="form__field-group">
-                    <input type="text" name="username" id="id_username" class="form__input">
+                    {{ form.username|addclass:"form__input" }}
                     <span class="form__error"></span>
                 </div>
             </div>
             <div class="form__group">
-                <label for="id_password" class="form__label">Пароль</label>
+                <label for="{{ form.password.id_for_label }}" class="form__label">Пароль</label>
                 <div class="form__field-group">
-                    <input type="password" name="password" id="id_password" class="form__input">
-                    <span class="form__error">Имя пользователя и пароль не совпадают. Введите правильные данные.</span>
+                    {{ form.password|addclass:"form__input" }}
+                    {% if form.errors %}
+                    <span class="form__error">
+                        Имя пользователя и пароль не совпадают. Введите правильные данные.
+                    </span>
+                    {% endif %}
                 </div>
             </div>
             <div class="form__footer">
-                <button class="button button_style_blue">Войти</button>
-                <a class="form__forgot-link">Забыли пароль?</a>
+                <button type="submit" class="button button_style_blue">Войти</button>
+                <a href="{% url 'password_reset' %}", class="form__forgot-link">Забыли пароль?</a>
             </div>
         </form>
     </div>
+</main>
 {% endblock content %}
 
 {% block base_scripts %}{% endblock base_scripts %}
