--- a/foodgram/users/templates/registration/password_change_form.html
+++ b/foodgram/users/templates/registration/password_change_form.html
@@ -1,7 +1,6 @@
-{% extends "base.html" %}
+{% extends "includes/base.html" %}
 {% block title %}Изменение пароля{% endblock %}
 {% block content %}
-{% load user_filters %}
 
 <div class="row justify-content-center">
     <div class="col-md-8 p-5">
@@ -17,8 +16,6 @@
                                 <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}{% if field.field.required %}<span class="required">*</span>{% endif %}</label>
                                 <div class="col-md-6">
 
-                                    {# подключаем фильтр и указываем класс #}
-                                    {{ field|addclass:"form-control" }}
 
                                     {% if field.help_text %}
                                     <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
