--- a/foodgram/templates/myFollow.html
+++ b/foodgram/templates/myFollow.html
@@ -1,32 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Мои подписки</title>
-    <link rel="stylesheet" href="./pages/myFollow.css">
-</head>
-<body class="body">
-<header class="header">
-    <nav class="nav">
-        <div class="nav__container container">
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item nav__item_active"><a href="#" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+{% extends "includes/base.html" %}
+{% load static %}
 
-            </ul>
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Выход</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+{% block title %}Рецепты{% endblock %}
+
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'pages/myFollow.css' %}">
+{% endblock %}
+
+{% block content %}
 <main class="main container">
     <div class="main__header">
         <h1 class="main__title">Мои подписки</h1>
@@ -153,15 +134,10 @@
         </ul>
     </nav>
 </main>
-<footer class="footer">
-    <div class="footer__container container">
-        <a href="#" class="footer__brand link">Продуктовый помощник</a>
-        <ul class="footer__items">
-            <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
-            <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
-        </ul>
-    </div>
-</footer>
+{% endblock %}
+
+{% block js_block %}
+
 <script src="./js/config/config.js"></script>
 <script src="./js/components/MainCards.js"></script>
 <script src="./js/components/MyFollow.js"></script>
@@ -170,5 +146,4 @@
 <script src="./js/api/Api.js"></script>
 <script src="myFollow.js"></script>
 
-</body>
-</html>
+{% endblock %}
