Change views and models

--- a/foodgram/templates/favorite.html
+++ b/foodgram/templates/favorite.html
@@ -34,6 +34,6 @@
     <script src="{% static 'js/components/CardList.js' %}"></script>
     <script src="{% static 'js/components/Header.js' %}"></script>
     <script src="{% static 'js/api/Api.js' %}"></script>
-    <script src="favorite.js"></script>
+    <script src="{% static 'favorite.js' %}"></script>
 
 {% endblock %}
