--- a/foodgram/templates/includes/card_user.html
+++ b/foodgram/templates/includes/card_user.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% load static %}
+{% load thumbnail %}
+<div class="card-user" data-author="{{ author.id }}">
+    <div class="card-user__header">
+        <h2 class="card-user__title">{{ author }}</h2>
+    </div>
+    <div class="card-user__body">
+        <ul class="card-user__items">
+            {% with author.recipes.all as recipes %}
+                {% for recipe in recipes|slice:3 %}
+                    <li class="card-user__item">
+                        <div class="recipe">
+                            {% thumbnail recipe.image "72x72" crop="center" upscale=True as im %}
+                                <img src="{{ im.url }}" alt="{{ recipe.title }}" class="recipe__image">
+                            {% endthumbnail %}
+                            <h3 class="recipe__title">{{ recipe.title }}</h3>
+                            <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
+                        </div>
+                    </li>
+                {% endfor %}
+                {% if recipes.count > 3 %}
+                    <li class="card-user__item">
+                        <a href="{% url 'authors_recipes' author.username %}" class="card-user__link link">Еще рецепты...</a>
+                    </li>
+                {% endif %}
+            {% endwith %}
+        </ul>
+    </div>
+    <div class="card-user__footer">
+        <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
+    </div>
+</div>
