--- a/foodgram/templates/includes/card_recipe.html
+++ b/foodgram/templates/includes/card_recipe.html
@@ -19,7 +19,11 @@
     {% if user.is_authenticated %}
         <div class="card__footer">
             <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-            <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
+            {% if recipe in favorite_recipes %}
+                <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
+            {% else %}
+                <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
+            {% endif %}
         </div>
     {% endif %}
 </div>
