--- a/foodgram/templates/includes/card_recipe.html
+++ b/foodgram/templates/includes/card_recipe.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load recipe_filters %}
 <div class="card" data-id="{{ recipe.id }}">
     {% load thumbnail %}
     {% thumbnail recipe.image "600x500" crop="center" upscale=True as im %}
@@ -13,13 +14,17 @@
         </ul>
         <div class="card__items card__items_column">
             <p class="card__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
-            <p class="card__text"><span class="icon-user"></span> <a href="*" style="color: black">{{ recipe.author.username }}</a></p>
+            <p class="card__text"><span class="icon-user"></span> <a href="{% url 'profile' recipe.author.username %}" style="color: black">{{ recipe.author.username }}</a></p>
         </div>
     </div>
     {% if user.is_authenticated %}
         <div class="card__footer">
-            <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-            {% if recipe in favorite_recipes %}
+            {% if recipe|is_purchase:user %}
+                <button class="button button_style_light-blue" name="purchases"><span class="icon-plus button__icon"></span>Удалить из покупок</button>
+            {% else %}
+                <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+            {% endif %}
+            {% if recipe|is_favorite:user %}
                 <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
             {% else %}
                 <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
