--- a/foodgram/templates/includes/card_recipe.html
+++ b/foodgram/templates/includes/card_recipe.html
@@ -20,7 +20,7 @@
     {% if user.is_authenticated %}
         <div class="card__footer">
             {% if recipe|is_purchase:user %}
-                <button class="button button_style_light-blue" name="purchases"><span class="icon-plus button__icon"></span>Удалить из покупок</button>
+                <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
             {% else %}
                 <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
             {% endif %}
