--- a/foodgram/templates/singlePage.html
+++ b/foodgram/templates/singlePage.html
@@ -1,101 +1,98 @@
-<!doctype html>
-<html lang="en">
+{% extends "includes/base.html" %}
 {% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Французские тосты</title>
-    <link rel="stylesheet" href="{% static 'pages/index.css' %}">
-</head>
-<body class="body">
-<header class="header">
-    <nav class="nav">
-        <div class="nav__container container">
-            <ul class="nav__items list">
-                <li class="nav__item nav__item_active"><a href="#" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+{% load recipe_filters %}
 
-            </ul>
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Выход</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+{% block title %}Рецепты{% endblock %}
+
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'pages/single.css' %}">
+{% endblock %}
+
+{% block content %}
     <main class="main container">
-        <div class="single-card" data-id="371" data-author="12">
-            <img src="{% static './images/testCardImg.png' %}" alt="какой-то текст" class="single-card__image">
+        {% csrf_token %}
+        <div class="single-card" data-id="{{ object.id }}" data-author="{{ object.author.id }}">
+            {% load thumbnail %}
+            {% thumbnail recipe.image "600x500" crop="center" upscale=True as im %}
+                <img src="{{ im.url }}" alt="Нет изображения" class="single-card__image">
+            {% endthumbnail %}
             <div class="single-card__info">
                 <div class="single-card__header-info">
-                    <h1 class="single-card__title">Французские тосты</h1>
+                    <h1 class="single-card__title">{{ object.title }}</h1>
                     <div class="single-card__favorite">
-                        <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
-                        <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                        {% if recipe|is_favorite:user %}
+                            <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_big icon-favorite_active"></span></button>
+                            <div class="single-card__favorite-tooltip tooltip">Удалить из избранного</div>
+                        {% else %}
+                            <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
+                            <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                        {% endif %}
                     </div>
                 </div>
                 <ul class="single-card__items">
-                    <li class="single-card__item"><span class="badge badge_style_green">Обед</span></li>
-                    <li class="single-card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-                    <li class="single-card__item"><span class="badge badge_style_purple">Ужин</span></li>
+                    {% for tag in recipe.tag.all %}
+                        <li class="card__item"><span class="badge badge_style_{{ tag.color }}">{{ tag.title }}</span></li>
+                    {% endfor %}
                 </ul>
                 <div class="single-card__items single-card__items_column">
-                    <p class="single-card__text"><span class="icon-time"></span> 20 мин.</p>
+                    <p class="single-card__text"><span class="icon-time"></span> {{ object.cooking_time }} мин.</p>
                     <ul class="single-card__items">
-                        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span> Вероника Чернова</p></li>
-                        <li class="single-card__item">  <a style="margin-left: 2.5em" href="#" class="single-card__text">Редактировать рецепт</a></li>
+                        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span> {{ object.author.username}}</p></li>
+                        {% if recipe.author == user %}
+                            <li class="single-card__item">  <a style="margin-left: 2.5em" href="#" class="single-card__text">Редактировать рецепт</a></li>
+                        {% endif %}
                     </ul>
                 </div>
-                <ul class="single-card__items">
-                    <li class="single-card__item"><button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
-                    <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
-                </ul>
+                {% if  user.is_authenticated %}
+                    <ul class="single-card__items">
+                        <li class="single-card__item">
+                            {% if recipe|is_purchase:user %}
+                                <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button></li>
+                            {% else %}
+                                <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button></li>
+                            {% endif %}
+                        {% if recipe.author != user %}
+                            {% if recipe.author|is_subscribe:user %}
+                                <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe">Отписаться</button></li>
+                            {% else %}
+                                <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+                            {% endif %}
+                        {% endif %}
+                {% endif %}
+                    </ul>
                 <div class="single-card__section">
                     <h3 class="single-card__section-title">Ингридиенты:</h3>
                     <div class="single-card__items single-card__items_column">
-                        <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-                        <p class=" single-card__section-item">Молоко - 200 мл.</p>
-                        <p class=" single-card__section-item">Тосты - 4 шт.</p>
-                        <p class=" single-card__section-item">Сахар 2 сл.л.</p>
-                        <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-                        <p class=" single-card__section-item">Молоко - 200 мл.</p>
+                        {% for ingredient in object.recipe_ingredients.all %}
+                            <p class=" single-card__section-item">{{ ingredient.ingredient.title }} - {{ ingredient.amount }} {{ ingredient.ingredient.dimension }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="single-card__section">
                     <h3 class="single-card__section-title">Описание:</h3>
-                    <p class=" single-card__section-text">Смешать молоко с сахаром, добавить яйца, тщательно все взбить.
-                        Обмакнуть тосты в смесь и жарить на сливочном масле до золотистой корочки.</p>
-                    <p class=" single-card__section-text">Полить сверху сиропом топинамбура и украсить ягодами.</p>
+                    <p class=" single-card__section-text">{{ object.description }}.</p>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="footer">
-        <div class="footer__container container">
-            <a href="#" class="footer__brand link">Продуктовый помощник</a>
-            <ul class="footer__items">
-                <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
-                <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
-            </ul>
-        </div>
-    </footer>
-<script src="{% static './js/components/Purchases.js' %}"></script>
-<script src="{% static './js/components/Favorites.js' %}"></script>
-<script src="{% static './js/components/Subscribe.js' %}"></script>
+{% endblock %}
 
-<script src="{% static './js/config/config.js' %}"></script>
+{% block js_block %}
 
-<script src="{% static './js/components/MainCards.js' %}"></script>
-<script src="{% static './js/components/SingleCard.js' %}"></script>
-<script src="{% static './js/components/Header.js' %}"></script>
+    <script src="{% static 'js/components/MainCards.js' %}"></script>
+    <script src="{% static 'js/components/SingleCard.js' %}"></script>
+    <script src="{% static 'js/components/Purchases.js' %}"></script>
+    <script src="{% static 'js/components/Favorites.js' %}"></script>
+    <script src="{% static 'js/components/Subscribe.js' %}"></script>
+    <script src="{% static 'js/config/config.js' %}"></script>
+    <script src="{% static 'js/components/Header.js' %}"></script>
+    <script src="{% static 'js/api/Api.js' %}"></script>
 
 
-<script src="{% static './js/api/Api.js' %}"></script>
-<script src="{% static 'singlePage.js' %}"></script>
-</body>
-</html>
+    {% if user.is_authenticated %}
+        <script src="{% static 'singlePage.js' %}"></script>
+    {% else %}
+        <script src="{% static 'singlePageNotAuth.js' %}"></script>
+    {% endif %}
+
+{% endblock %}
