Added Purchases JS

--- a/foodgram/templates/authorRecipe.html
+++ b/foodgram/templates/authorRecipe.html
@@ -40,6 +40,7 @@
 {% block js_block %}
 
     <script src="{% static 'js/components/MainCards.js' %}"></script>
+    <script src="{% static 'js/components/AuthorRecipe.js' %}"></script>
     <script src="{% static 'js/components/Purchases.js' %}"></script>
     <script src="{% static 'js/components/Favorites.js' %}"></script>
     <script src="{% static 'js/components/Subscribe.js' %}"></script>
