Added Shop list ingredients count function

--- a/foodgram/templates/shopList.html
+++ b/foodgram/templates/shopList.html
@@ -29,7 +29,7 @@
             </li>
             {% endfor %}
         </ul>
-        <a href="#"><button class="button button_style_blue">Скачать список</button></a>
+        <a href="{% url 'shop_list' %}"><button class="button button_style_blue">Скачать список</button></a>
 
 
     </div>
