--- a/foodgram/templates/includes/nav.html
+++ b/foodgram/templates/includes/nav.html
@@ -6,7 +6,7 @@
                 <li class="nav__item {% if request.resolver_match.url_name == 'follow_index' %}nav__item_active{% endif %}"><a href="{% url 'follow_index' %}" class="nav__link link">Мои подписки</a></li>
                 <li class="nav__item {% if request.resolver_match.url_name == 'new_recipe' %}nav__item_active{% endif %}"><a href="" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item {% if request.resolver_match.url_name == 'favorite_recipes' %}nav__item_active{% endif %}"><a href="{% url 'favorite_recipes' %}" class="nav__link link">Избранное</a></li>
-                <li class="nav__item {% if request.resolver_match.url_name == 'shop_list' %}nav__item_active{% endif %}"><a href="{% url 'shop_list' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></li>
+                <li class="nav__item {% if request.resolver_match.url_name == 'shop_list' %}nav__item_active{% endif %}"><a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></li>
             {% else %}
 
             {% endif %}
