Start adding new_recipe page

--- a/foodgram/templates/includes/nav.html
+++ b/foodgram/templates/includes/nav.html
@@ -4,7 +4,7 @@
             <li class="nav__item {% if request.resolver_match.url_name == 'index' %} nav__item_active {% endif %}"><a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
             {% if user.is_authenticated %}
                 <li class="nav__item {% if request.resolver_match.url_name == 'follow_index' %}nav__item_active{% endif %}"><a href="{% url 'follow_index' %}" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item {% if request.resolver_match.url_name == 'new_recipe' %}nav__item_active{% endif %}"><a href="" class="nav__link link">Создать рецепт</a></li>
+                <li class="nav__item {% if request.resolver_match.url_name == 'new_recipe' %}nav__item_active{% endif %}"><a href="{% url 'new_recipe' %}" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item {% if request.resolver_match.url_name == 'favorite_recipes' %}nav__item_active{% endif %}"><a href="{% url 'favorite_recipes' %}" class="nav__link link">Избранное</a></li>
                 <li class="nav__item {% if request.resolver_match.url_name == 'purchases' %}nav__item_active{% endif %}"><a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></li>
             {% else %}
