--- a/foodgram/templates/formRecipe2.html
+++ b/foodgram/templates/formRecipe2.html
@@ -1,70 +1,48 @@
 {% extends "includes/base.html" %}
 {% load static %}
-{% load user_filters %}
-{% block title %}{% if recipe %}Редактирование рецепта{% else %}Создание рецепта{% endif %}{% endblock %}
+
+{% block title %}Рецепты{% endblock %}
+
 {% block css_block %}
     <link rel="stylesheet" href="{% static 'pages/form.css' %}">
 {% endblock %}
 
 {% block content %}
+
 <main class="main container">
     <div class="main__header">
-        <h1 class="main__title">
-            {% if recipe %}Редактирование рецепта{% else %}Создание рецепта{% endif %}
-        </h1>
+        <h1 class="main__title">Создание рецепта</h1>
     </div>
-
     <div class="form-container">
         <form class="form" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-
-             <div class="form__group">
-                <label for="{{ form.title.id_for_label }}" class="form__label">Название рецепта</label>
+            <div class="form__group">
+                <label for="id_name" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
-
-                    {{ form.title|addclass:"form__input"}}
-
-                    {% if form.errors %}
-                        {% for errors in title.errors %}
-                            <span class="form__error">{{ error|escape}}</span>
-                        {% endfor %}
-                    {% endif %}
+                    <input type="text" id="id_name" name="name" class="form__input">
+                    <span class="form__error"></span>
                 </div>
             </div>
-
             <div class="form__group">
-                {% csrf_token %}
                 <p class="form__label">Теги</p>
                 <div class="form__field-group">
                     <div class="tags">
-                        {% if recipe %}
-                            {% for tag in tags %}
-                                <div class="tags__item">
-                                    <input type="checkbox" name="tags" value="{{ tag.id }}" id="id_{{ tag.name }}"
-                                           class="tags__checkbox tags__checkbox_style_{{ tag.color}}" {% if tag in recipe.tags.all %}checked{% endif %}>
-                                    <label for="id_{{ tag.name }}" class="tags__label">{{ tag.name }}</label>
-                                </div>
-                            {% endfor %}
-                        {% else %}
-                            {% for tag in form.fields.tag.choices.queryset %}
-                                <div class="tags__item">
-                                    <input type="checkbox" name="tags" value="{{ tag.pk }}" id="id_{{ tag.name }}"
-                                           class="tags__checkbox tags__checkbox_style_{{ tag.color}}">
-                                    <label for="id_{{ tag.name }}" class="tags__label">{{ tag.title }}</label>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
+                        <div class="tags__item">
+                            <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
+                            <label for="id_breakfast" class="tags__label">Завтрак</label>
                         </div>
-
-                        {% if form.errors %}
-                            {% for errors in form.tag.errors %}
-                                <span class="form__error">{{ error|escape}}</span>
-                            {% endfor %}
-                        {% endif %}
-
+                        <div class="tags__item">
+                            <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" checked>
+                            <label for="id_lunch" class="tags__label">Обед</label>
+                        </div>
+                        <div class="tags__item">
+                            <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" checked>
+                            <label for="id_dinner" class="tags__label">Ужин</label>
+                        </div>
                     </div>
+                    <span class="form__error"></span>
                 </div>
-
+            </div>
             <div class="form__group">
                 <label for="nameIngredient" class="form__label">Ингредиенты</label>
                 <div class="form__field-group">
@@ -80,28 +58,17 @@
 
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                        {% if form.errors %}
-                            {% for errors in field.errors %}
-                                <span class="form__error">{{ error|escape}}</span>
-                            {% endfor %}
-                        {% endif %}
+                    <span class="form__error"></span>
                 </div>
             </div>
-
             <div class="form__group">
-                <label for="{{ form.cooking_time.id_for_label }}" class="form__label">Время приготовления</label>
+                <label for="id_time" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
-                    {{ form.cooking_time|addclass:"form__input" }}
+                    <input type="text" id="id_time" name="name" class="form__input">
                     <label for="id_time" class="form__label">минут</label>
-                        {% if form.errors %}
-                            {% for errors in field.errors %}
-                                <span class="form__error">{{ error|escape}}</span>
-                            {% endfor %}
-                        {% endif %}
+                    <span class="form__error"></span>
                 </div>
             </div>
-
-
             <div class="form__group">
                 <label for="id_description" class="form__label">Описание</label>
                 <div class="form__field-group">
@@ -124,6 +91,7 @@
 
 
 </main>
+
 {% endblock %}
 
 {% block js_block %}
