--- a/foodgram/templates/formRecipe.html
+++ b/foodgram/templates/formRecipe.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-container">
-        <form class="form" method="post" enctype="multipart/form-data" action="{% url 'new_recipe' %}">
+        <form class="form" method="post">
             {% csrf_token %}
 
              <div class="form__group">
@@ -36,6 +36,7 @@
                 <p class="form__label">Теги</p>
                 <div class="form__field-group">
                     <div class="tags">
+
                         {% for tag in form.fields.tag.choices.queryset %}
                             <div class="tags__item">
                                 <input type="checkbox" name="tag" id="id_{{ tag.name }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}" value="{{ tag.id }}"
@@ -43,6 +44,7 @@
                                 <label for="id_{{ tag.name }}" class="tags__label">{{ tag.title }}</label>
                             </div>
                         {% endfor %}
+
                         </div>
 
                         <span class="form__error">{{ form.tag.errors }}</span>
@@ -62,7 +64,15 @@
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
                     <div class="form__field-group-ingredientes-container">
-
+                      {% for i in recipe.recipe_ingredients.all %}
+                        <div class="form__field-item-ingredient" id="ing_{{ forloop.counter }}">
+                          <span> {{ i.ingredient.title }} {{ i.amount }}{{ i.ingredient.dimension }}</span>
+                          <span class="form__field-item-delete"></span>
+                          <input id="nameIngredient_{{ forloop.counter }}" name="nameIngredient_{{ forloop.counter }}" type="hidden" value="{{ i.ingredient.title }}">
+                          <input id="valueIngredient_{{ forloop.counter }}" name="valueIngredient_{{ forloop.counter }}" type="hidden" value="{{ i.amount }}">
+                          <input id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient_{{ forloop.counter }}" type="hidden" value="{{ i.ingredient.dimension }}">
+                        </div>
+                      {% endfor %}
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
                         {% if form.errors %}
@@ -110,7 +120,11 @@
                 </div>
             </div>
             <div class="form__footer">
-                <button type="submit" class="button button_style_blue">Создать рецепт</button>
+                {% if recipe %}
+                    <button type="submit" class="button button_style_blue">Сохранить</button> <a style="margin-left: 2.5em" href="{% url 'delete_recipe' recipe.id %}" class="form__ingredient-link">Удалить</a>
+                {% else %}
+                    <button type="submit" class="button button_style_blue">Создать рецепт</button>
+                {% endif %}
             </div>
         </form>
     </div>
