--- a/foodgram/templates/formRecipe.html
+++ b/foodgram/templates/formRecipe.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-container">
-        <form class="form" method="post">
+        <form class="form" method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
              <div class="form__group">
