--- a/foodgram/templates/includes/paginator.html
+++ b/foodgram/templates/includes/paginator.html
@@ -1,19 +1,19 @@
-<nav class="pagination" aria-label="Переключение страниц">
-    <ul class="pagination__container">
-        {% if items.has_previous %}
-            <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.previous_page_number }}"><span class="icon-left"></span></a></li>
-        {% endif %}
+{% load recipe_filters %}
 
-        {% for page in paginator.page_range %}
-            {% if items.number == page %}
-                <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="#">{{ page }}</a></li>
+<nav class="pagination" aria-label="Search results pages">
+    <ul class="pagination__container">
+        {% if page_obj.has_previous %}
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ page_obj.previous_page_number }}&{{request.GET|get_tags }}"><span class="icon-left"></span></a></li>
+        {% endif %}
+        {% for i in paginator.page_range %}
+            {% if page_obj.number == i %}
+            <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="?page={{ i }}&{{request.GET|get_tags }}">{{ i }}</a></li>
             {% else %}
-                <li class="pagination__item"><a class="pagination__link link" href="?page={{ page }}">{{ page }}</a></li>
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ i }}&{{request.GET|get_tags }}">{{ i }}</a></li>
             {% endif %}
         {% endfor %}
-
-        {% if items.has_next %}
-            <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.next_page_number }}"><span class="icon-right"></span></a></li>
+        {% if page_obj.has_next %}
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ page_obj.next_page_number }}&{{request.GET|get_tags }}"><span class="icon-right"></span></a></li>
         {% endif %}
     </ul>
 </nav>
