--- a/foodgram/templates/authorRecipe.html
+++ b/foodgram/templates/authorRecipe.html
@@ -30,8 +30,8 @@
                 {% include "includes/card_recipe.html" %}
             {% endfor %}
         </div>
-        {% if page.has_other_pages %}
-            {% include "paginator.html" with items=page paginator=paginator %}
+        {% if is_paginated %}
+            {% include "includes/paginator.html" with items=page_obg paginator=paginator %}
         {% endif %}
     </main>
 
