--- a/foodgram/templates/favorite.html
+++ b/foodgram/templates/favorite.html
@@ -19,8 +19,8 @@
                 {% include "includes/card_recipe.html" with recipe=recipe %}
             {% endfor %}
         </div>
-        {% if page.has_other_pages %}
-            {% include "paginator.html" with items=page paginator=paginator %}
+        {% if is_paginated %}
+            {% include "includes/paginator.html" with items=page_obg paginator=paginator %}
         {% endif %}
     </main>
 {% endblock %}
