Refactoring users templates

--- a/foodgram/users/templates/registration/password_change_done.html
+++ b/foodgram/users/templates/registration/password_change_done.html
@@ -1,16 +1,16 @@
 {% extends "includes/base.html" %}
 {% block title %}Пароль изменён{% endblock %}
 
-{% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-        <div class="card">
-            <div class="card-header">Пароль изменён</div>
-            <div class="card-body">
-                <p>Пароль изменён успешно</p>
-            </div> <!-- card body -->
-        </div> <!-- card -->
-    </div> <!-- col -->
-</div> <!-- row -->
+{% load user_filters %}
+{% load static %}
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+{% endblock %}
 
+{% block content %}
+<main class="main container">
+    <div class="main__header">
+        <h1 class="main__title">Пароль изменён успешно</h1>
+    </div>
+</main>
 {% endblock %}
