--- a/foodgram/users/templates/registration/password_reset_done.html
+++ b/foodgram/users/templates/registration/password_reset_done.html
@@ -1,16 +1,16 @@
 {% extends "includes/base.html" %}
-{% block title %}Сброс пароля прошёл успешно{% endblock %}
+{% block title %}Пароль изменён{% endblock %}
+
+{% load user_filters %}
+{% load static %}
+{% block css_block %}
+    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-        <div class="card">
-            <div class="card-header">Сброс пароля прошёл успешно</div>
-            <div class="card-body">
-                <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для восстановления пароля.</p>
-            </div> <!-- card body -->
-        </div> <!-- card -->
-    </div> <!-- col -->
-</div> <!-- row -->
-
+<main class="main container">
+    <div class="main__header">
+        <h1 class="main__title">Сброс пароля наверное прошёл успешно! Рассылка на email не настроена =)</h1>
+    </div>
+</main>
 {% endblock %}
